# voxel-raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.hpp  main.cpp
src/assets/shaders/: compile.sh  shader.comp
src/render/: buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_manager.cpp  descriptor_manager.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  sync_manager.cpp  sync_manager.hpp  utils.hpp
src/world/: brick.hpp  chunk.cpp  chunk.hpp  materials.hpp  terrain_noise.cpp  terrain_noise.hpp  voxel_world.cpp  voxel_world.hpp  world_gen.cpp  world_gen.hpp
